# spectryn

./: .cursorrules  .dockerignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  mutmut_config.py  pyproject.toml  setup.cfg  test_export.html
.github/: AGENTS.md  BRANCH_PROTECTION.md  RELEASE.md  auto-assign.yml  dependabot.yml  labeler.yml
.github/DISCUSSION_TEMPLATE/: help-wanted.yml  questions.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: auto-assign.yml  labeler.yml  md2jira-pull.yml  md2jira-sync.yml  pr-title.yml  pr.yml  release-packages.yml  release.yml  stale.yml  tests.yml
completions/: md2jira.bash  md2jira.fish  md2jira.zsh
docs/: .gitignore  COMPLETIONS.md  DEPLOYMENT.md  YAML_SCHEMA.md  changelog.md  contributing.md  index.md  package-lock.json  package.json  vercel.json
docs/.vitepress/: config.ts
docs/cookbook/: ai-assisted.md  bug-triage.md  documentation-driven.md  index.md  migration.md  monorepo.md  multi-team.md  release-planning.md  sprint-planning.md
docs/examples/: basic.md  cicd.md  ecommerce.md  template.md
docs/guide/: adapter-development.md  agents.md  ai-fix.md  ai-prompts.md  architecture.md  asana.md  azure-devops.md  basecamp.md  best-practices.md  bitbucket.md  case-studies.md  clickup.md  completions.md  configuration.md  docker.md  environment.md  faq.md  getting-started.md  github.md  gitlab.md  installation.md  linear.md  monday.md  performance.md  pivotal.md  plane.md  plugins.md  quick-start.md  recipes.md  schema.md  shortcut.md  telemetry.md  trello.md  troubleshooting.md  youtrack.md
docs/plan/: BACKLOG.md  FLEXIBILITY-PLAN.md  IMPROVEMENTS-CHECKLIST.md  TRACKER-WRITEBACK-PLAN.md
docs/reference/: cli.md  exit-codes.md
docs/tutorials/: backup-restore.md  cicd-setup.md  first-sync.md  index.md  interactive-mode.md
github-action/: Dockerfile  README.md  action.yml  entrypoint.sh
integrations/aws-cloudformation/: README.md  spectra-complete.yaml  spectra-fargate.yaml  spectra-lambda.yaml
integrations/azure-arm/: README.md  main.bicep
integrations/azure-pipelines/: README.md  spectra-pipeline.yml
integrations/bitbucket-pipelines/: README.md  bitbucket-pipelines.yml
integrations/circleci-orb/: README.md  config.example.yml  orb.yml
integrations/emacs/: README.md
integrations/github-action/: Dockerfile  README.md  action.yml  entrypoint.sh
integrations/gitlab-ci/: .spectra-ci.yml  README.md
integrations/helix/: README.md
integrations/helm-chart/: README.md
integrations/jenkins/: Jenkinsfile.example  README.md
integrations/jetbrains/: README.md
integrations/kubernetes-operator/: Dockerfile  Makefile  README.md  go.mod
integrations/lsp/: README.md  pyproject.toml
integrations/lsp/src/spectryn_lsp/: __init__.py  server.py
integrations/lsp/tests/: test_server.py
integrations/neovim/: README.md
integrations/pulumi/: README.md  package.json  tsconfig.json
integrations/sublime/: README.md
integrations/terraform/: README.md
integrations/vscode/: README.md  package-lock.json  package.json
integrations/zed/: README.md
nvim-plugin/: README.md
nvim-plugin/doc/: md2jira.txt
nvim-plugin/plugin/: md2jira.lua
packaging/: README.md
packaging/chocolatey/: md2jira.nuspec
packaging/completions/: spectryn.bash  spectryn.fish  spectryn.zsh
packaging/docker/: Dockerfile  docker-compose.yml
packaging/homebrew/: md2jira.rb
packaging/linux/: install.sh
scripts/: mutation_test.py  mutmut_config.py  run.sh
src/md2jira/: testing.py
src/spectra/: testing.py
terraform-provider-jira/: go.mod
tests/: conftest.py
tests/adapters/: test_adf_formatter.py  test_asana_adapter.py  test_asana_async.py  test_asciidoc_parser.py  test_async_http_clients.py  test_async_parallel.py  test_azure_devops_adapter.py  test_azure_devops_async_batch.py  test_azure_devops_client.py  test_basecamp_adapter.py  test_bitbucket_adapter.py  test_bitbucket_server_client.py  test_bounded_concurrency.py  test_cache.py  test_clickup_adapter.py  test_code_block_parsing.py  test_config_providers.py  test_confluence_adapter.py  test_confluence_client.py  test_confluence_parser.py  test_connection_pool.py  test_csv_parser.py  test_diagram_parser.py  test_event_store.py  test_excel_parser.py  test_file_cache.py  test_flexible_id_prefixes.py  test_github_adapter.py  test_github_client.py  test_gitlab_adapter.py  test_gitlab_client.py  test_gitlab_sdk_client.py  test_google_docs_parser.py  test_google_sheets_parser.py  test_graphql_api.py  test_graphql_batching.py  test_graphql_parser.py  test_image_embedding.py  test_inline_subtasks.py  test_jira_adapter.py  (+42 more)
tests/application/: test_ai_acceptance.py  test_ai_dependency.py  test_ai_duplicate.py  test_ai_estimate.py  test_ai_gap.py  test_ai_generate.py  test_ai_label.py  test_ai_prompts.py  test_ai_quality.py  test_ai_refine.py  test_ai_split.py  test_ai_sync_summary.py  test_attachments.py  test_audit.py  test_backup.py  test_bidirectional.py  test_commands.py  test_conflict.py  test_delta.py  test_dependencies.py  test_diff.py  test_epic_hierarchy.py  test_event_sourcing.py  test_field_mapping.py  test_idempotency.py  test_incremental.py  test_links.py  test_merge.py  test_multi_epic.py  test_multi_tracker.py  test_notifications.py  test_parallel.py  test_progress.py  test_reverse_sync.py  test_scheduler.py  test_source_updater.py  test_sprint_sync.py  test_state.py  test_time_tracking.py  test_transaction.py  (+5 more)
tests/benchmarks/: __init__.py  conftest.py  test_domain_bench.py  test_result_bench.py  test_specification_bench.py
tests/chaos/: test_chaos_engineering.py
tests/cli/: __init__.py  test_ai_fix.py  test_analytics.py  test_app_main.py  test_archive.py  test_bulk.py  test_changelog.py  test_cli.py  test_completions.py  test_config_cmd.py  test_csv_import.py  test_dashboard.py  test_diff_cmd.py  test_doctor.py  test_errors.py  test_export_cmd.py  test_formats.py  test_generate.py  test_health.py  test_hook.py  test_import_cmd.py  test_init.py  (+16 more)
vscode-extension/: README.md  package.json
(+279 files in other folders)
