[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "md2jira"
version = "2.0.0"
description = "A production-grade CLI tool for synchronizing markdown documentation with Jira"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Adrian Darian", email = "adrian.the.hactus@gmail.com"}
]
keywords = [
    "jira",
    "markdown",
    "sync",
    "documentation",
    "agile",
    "project-management",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Bug Tracking",
    "Typing :: Typed",
]

dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",  # YAML config file support
    "tomli>=2.0; python_version < '3.11'",  # TOML support for Python 3.10
]

[project.optional-dependencies]
async = [
    "aiohttp>=3.8.0",  # Async HTTP client for parallel API calls
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "pytest-asyncio>=0.21.0",  # Async test support
    "pytest-benchmark>=4.0",  # Performance benchmarking
    "hypothesis>=6.0",  # Property-based testing
    "mutmut>=2.4",  # Mutation testing
    "aiohttp>=3.8.0",  # For testing async functionality
    "mypy>=1.0",
    "ruff>=0.1.0",
    "black>=23.0",
    "pre-commit>=3.0",
    "types-PyYAML>=6.0",  # Type stubs for PyYAML
]
all = [
    "aiohttp>=3.8.0",  # Async HTTP client for parallel API calls
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
]

[project.scripts]
md2jira = "md2jira.cli:run"

[project.entry-points."md2jira.plugins"]
# Built-in plugins (example entry points for future plugins)
# github = "md2jira.plugins.github:GithubTrackerPlugin"
# linear = "md2jira.plugins.linear:LinearTrackerPlugin"

[project.urls]
Homepage = "https://github.com/adriandarian/md2jira"
Documentation = "https://github.com/adriandarian/md2jira#readme"
Repository = "https://github.com/adriandarian/md2jira.git"
Issues = "https://github.com/adriandarian/md2jira/issues"
Changelog = "https://github.com/adriandarian/md2jira/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
md2jira = ["py.typed"]

# ============================================================================
# Testing
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "benchmark: marks test as a performance benchmark",
]
# Benchmarks disabled by default; run with: pytest tests/benchmarks/ --benchmark-only

[tool.coverage.run]
source = ["src/md2jira"]
branch = true
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
# Target: 80%+ coverage. Current baseline: ~72%. Increase as coverage improves.
fail_under = 70
show_missing = true
skip_covered = false
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

# ============================================================================
# Type Checking
# ============================================================================

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["requests.*"]
ignore_missing_imports = true

# ============================================================================
# Linting & Formatting
# ============================================================================

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C90",    # mccabe complexity
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # bugbear
    "A",      # builtins
    "C4",     # comprehensions
    "T10",    # debugger
    "ISC",    # implicit-str-concat
    "ICN",    # import-conventions
    "PIE",    # misc
    "PT",     # pytest-style
    "Q",      # quotes
    "RET",    # return
    "SIM",    # simplify
    "TID",    # tidy-imports
    "ARG",    # unused-arguments
    "PTH",    # pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "RUF",    # ruff-specific
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["md2jira"]
force-single-line = false
lines-after-imports = 2

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.ruff_cache
    | \.venv
    | build
    | dist
)/
'''
# Mutation testing is configured via mutmut_config.py
# Run with: mutmut run
