[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectra"
version = "1.0.0"
description = "A production-grade CLI tool for synchronizing markdown specifications with issue trackers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Adrian Darian", email = "adrian.the.hactus@gmail.com"}
]
keywords = [
    "jira",
    "github",
    "azure-devops",
    "linear",
    "markdown",
    "sync",
    "issue-tracker",
    "agile",
    "project-management",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Bug Tracking",
    "Typing :: Typed",
]

dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",  # YAML config file support
    "tomli>=2.0; python_version < '3.11'",  # TOML support for Python <3.11
]

[project.optional-dependencies]
async = [
    "aiohttp>=3.8.0",  # Async HTTP client for parallel API calls
]
gitlab = [
    "python-gitlab>=4.0.0",  # Official GitLab Python SDK (optional alternative to custom client)
]
bitbucket = [
    "atlassian-python-api>=3.0.0",  # Atlassian Python API for Bitbucket Server support
]
telemetry = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-exporter-prometheus>=0.41b0",
]
prometheus = [
    "prometheus_client>=0.17.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "pytest-asyncio>=0.21.0",  # Async test support
    "pytest-benchmark>=4.0",  # Performance benchmarking
    "hypothesis>=6.0",  # Property-based testing
    "mutmut>=2.4",  # Mutation testing
    "aiohttp>=3.8.0",  # For testing async functionality
    "mypy>=1.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
    "types-PyYAML>=6.0",  # Type stubs for PyYAML
]
all = [
    "aiohttp>=3.8.0",  # Async HTTP client for parallel API calls
    "python-gitlab>=4.0.0",  # Official GitLab Python SDK
    "atlassian-python-api>=3.0.0",  # Atlassian Python API for Bitbucket Server
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-exporter-prometheus>=0.41b0",
    "prometheus_client>=0.17.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
]

[project.scripts]
spectra = "spectra.cli:run"

[project.entry-points."spectra.plugins"]
# Built-in plugins (example entry points for future plugins)
# github = "spectra.plugins.github:GithubTrackerPlugin"
# linear = "spectra.plugins.linear:LinearTrackerPlugin"

[project.urls]
Homepage = "https://github.com/adriandarian/spectra"
Documentation = "https://github.com/adriandarian/spectra#readme"
Repository = "https://github.com/adriandarian/spectra.git"
Issues = "https://github.com/adriandarian/spectra/issues"
Changelog = "https://github.com/adriandarian/spectra/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spectra = ["py.typed"]

# ============================================================================
# Testing
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "benchmark: marks test as a performance benchmark",
    "stress: marks tests as stress/load tests",
    "chaos: marks tests as chaos engineering tests",
    "e2e: marks tests as end-to-end workflow tests",
]
# Benchmarks disabled by default; run with: pytest tests/benchmarks/ --benchmark-only

[tool.coverage.run]
source = ["src/spectra"]
branch = true
relative_files = true
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
# Target: 80%+ coverage. Current baseline: ~65%. Increase as coverage improves.
fail_under = 80
show_missing = true
skip_covered = false
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

# ============================================================================
# Type Checking
# ============================================================================

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["spectra"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = false  # Some ignores conditional
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true  # Optional dependencies

[[tool.mypy.overrides]]
module = ["requests.*", "aiohttp.*", "opentelemetry.*", "prometheus_client.*", "gitlab.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Services and container modules use complex factory patterns
module = [
    "spectra.core.services",
    "spectra.core.container",
    "spectra.core",  # Module __init__ file
    "spectra.core.result",
    "spectra.adapters.cache.backend",
]
disable_error_code = ["type-abstract", "assignment", "valid-type", "type-var", "misc", "call-arg", "arg-type"]

[[tool.mypy.overrides]]
# CLI modules have some dynamic patterns
module = [
    "spectra.cli.*",
]
warn_return_any = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
disable_error_code = ["union-attr", "arg-type", "assignment", "attr-defined"]

[[tool.mypy.overrides]]
# Adapters have varied implementations
module = [
    "spectra.adapters.formatters.*",
    "spectra.adapters.parsers.*",
    "spectra.adapters.jira.*",
    "spectra.adapters.github.*",
    "spectra.adapters.linear.*",
    "spectra.adapters.azure_devops.*",
    "spectra.adapters.confluence.*",
    "spectra.adapters.config.*",
    "spectra.adapters.async_base.*",
]
warn_return_any = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
disable_error_code = ["index", "union-attr", "var-annotated", "arg-type", "assignment", "attr-defined", "return-value", "name-defined", "dict-item", "import-untyped"]

[[tool.mypy.overrides]]
# Application sync modules
module = [
    "spectra.application.sync.*",
]
disable_error_code = ["name-defined", "attr-defined", "call-arg", "arg-type", "assignment"]

[[tool.mypy.overrides]]
# Plugin modules are currently lightweight wrappers around adapters
module = [
    "spectra.plugins.*",
]
warn_return_any = false
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
# Testing utilities
module = [
    "spectra.testing",
]
disable_error_code = ["arg-type"]

# ============================================================================
# Linting & Formatting
# ============================================================================

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C90",    # mccabe complexity
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # bugbear
    "A",      # builtins
    "C4",     # comprehensions
    "T10",    # debugger
    "ISC",    # implicit-str-concat
    "ICN",    # import-conventions
    "PIE",    # misc
    "PT",     # pytest-style
    "Q",      # quotes
    "RET",    # return
    "SIM",    # simplify
    "TID",    # tidy-imports
    "ARG",    # unused-arguments
    "PTH",    # pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "RUF",    # ruff-specific
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "PLR0912", # too many branches
    "C901",    # too complex
    "A004",    # import shadowing builtin (PermissionError used intentionally)
    "RUF002",  # ambiguous unicode in docstrings (mathematical symbols)
    "RUF003",  # ambiguous unicode in comments (mathematical symbols)
    "PLC0415", # import not at top-level (lazy imports for optional deps)
    "PTH123",  # Path.open vs open() - preference not enforced
    "B904",    # raise from err - will fix incrementally
    "PLR0915", # too many statements
    "PLR0911", # too many return statements
    "SIM102",  # nested if - readability choice
    "E741",    # ambiguous variable name (l, O, I)
    "RUF012",  # mutable class attributes
    "PLW2901", # loop variable overwritten
    "PLW0603", # global statement
    "RUF001",  # ambiguous unicode
    "ISC003",  # explicit string concat
    "ARG001",  # unused function argument (interface implementations)
    "ARG002",  # unused method argument (interface implementations)
    "ARG005",  # unused lambda argument
    "B027",    # empty method in abstract class
    "A001",    # variable shadowing builtin (intentional for compat aliases)
    "A002",    # argument shadowing builtin (format in log handlers)
    "ERA001",  # commented out code (kept for documentation)
    "F402",    # import shadowed by loop variable
    "F821",    # undefined name (forward references)
    "B023",    # function doesn't bind loop variable
    "PLW1508", # invalid env var default type
    "PT028",   # test param has default argument
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ARG001",  # unused function argument
    "ARG002",  # unused method argument
    "ARG005",  # unused lambda argument
    "PLR2004", # magic value comparison
    "PLC0415", # import not at top level (fixtures use lazy imports)
    "PT011",   # pytest.raises too broad
    "PT017",   # pytest assert in except
    "PT019",   # pytest fixture without value
    "E731",    # lambda assignment
    "B023",    # function doesn't bind loop variable
    "N806",    # variable should be lowercase (test mocks)
    "PLR0915", # too many statements
    "SIM102",  # nested if
    "F401",    # unused import (conditional imports)
    "ERA001",  # commented out code
    "PLW2901", # loop variable overwritten
    "F821",    # undefined name (forward refs in tests)
]
"src/spectra/adapters/*" = [
    "ARG002",  # unused method argument (interface implementations)
    "B023",    # function doesn't bind loop variable
]
"src/spectra/core/__init__.py" = ["F401", "F403"]  # re-exports
"src/spectra/adapters/observability/*" = ["F401"]  # optional imports
"src/spectra/cli/telemetry.py" = ["F401"]  # optional imports for type checking
"**/__init__.py" = ["F401"]  # re-exports

[tool.ruff.lint.isort]
known-first-party = ["spectra"]
force-single-line = false
lines-after-imports = 2

# Mutation testing is configured via mutmut_config.py
# Run with: mutmut run
