[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectra-lsp"
version = "0.1.0"
description = "Language Server Protocol implementation for Spectra markdown files"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Spectra Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
]
keywords = ["lsp", "language-server", "spectra", "user-stories", "markdown"]
dependencies = [
    "pygls>=1.2.0",
    "lsprotocol>=2023.0.0",
    "spectra>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.scripts]
spectra-lsp = "spectryn_lsp.server:main"

[project.urls]
Homepage = "https://github.com/spectra/spectra"
Documentation = "https://spectra.dev/docs/guide/lsp"
Repository = "https://github.com/spectra/spectra"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
